cmake_minimum_required(VERSION 3.9)
project(openfleet_techtest)

set(CMAKE_CXX_STANDARD 14)

add_executable(openfleet_techtest main.cpp HardwareAbstraction/CoinAcceptorInterface.h HardwareAbstraction/CoinAcceptorDollarClass.cpp HardwareAbstraction/CoinAcceptorDollarClass.h HardwareAbstraction/CoinAcceptorEuroClass.cpp HardwareAbstraction/CoinAcceptorEuroClass.h HardwareAbstraction/CoinAcceptorFactoryClass.cpp HardwareAbstraction/CoinAcceptorFactoryClass.h StringUtil.h InventoryManagerClass.cpp InventoryManagerClass.h VendingMachineOperatorClass.cpp VendingMachineOperatorClass.h UserManagerClass.cpp UserManagerClass.h HardwareAbstraction/NFCReaderControllerClass.cpp HardwareAbstraction/NFCReaderControllerClass.h)